<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/match_wrap_gravity"
        android:layout_marginTop="@dimen/sp_25"
        android:fontFamily="@font/waiting_for_the_sunrise"
        android:text="@string/txt_Welcome_to_TTT"
        android:textColor="@color/purple_colour"
        android:textSize="@dimen/sp_40"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:contentDescription="@string/CD_Grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_420"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/box_first"
            style="@style/Boxes_similarities"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/Box_1_txt"
            android:tag="0" />

        <ImageView
            android:id="@+id/box_second"
            style="@style/Boxes_similarities"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/Box_2_txt"
            android:tag="1" />

        <ImageView
            android:id="@+id/box_third"
            style="@style/Boxes_similarities"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/Box_3_txt"
            android:tag="2" />


        <ImageView
            android:id="@+id/box_fourth"
            style="@style/Boxes_similarities"
            android:layout_below="@+id/box_first"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/Box_4_txt"
            android:tag="3" />

        <ImageView
            android:id="@+id/box_fifth"
            style="@style/Boxes_similarities"
            android:layout_below="@+id/box_second"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/Box_5_txt"
            android:tag="4" />

        <ImageView
            android:id="@+id/box_six"
            style="@style/Boxes_similarities"
            android:layout_below="@id/box_third"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_100"
            android:contentDescription="@string/Box_6_txt"
            android:tag="5" />


        <ImageView
            android:id="@+id/box_seventh"
            style="@style/Boxes_similarities"
            android:layout_below="@+id/box_fourth"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/dp_90"
            android:contentDescription="@string/Box_7_txt"
            android:tag="6" />

        <ImageView
            android:id="@+id/box_eight"
            style="@style/Boxes_similarities"
            android:layout_below="@+id/box_fifth"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_90"
            android:contentDescription="@string/Box_8_txt"
            android:tag="7" />

        <ImageView
            android:id="@+id/box_nine"
            style="@style/Boxes_similarities"
            android:layout_below="@id/box_six"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_90"
            android:contentDescription="@string/Box_9_txt"
            android:tag="8" />


    </RelativeLayout>


    <TextView
        android:id="@+id/Game_Status"
        style="@style/match_wrap_gravity"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/purple_colour"
        android:fontFamily="@font/waiting_for_the_sunrise"
        android:text="@string/Player1_TapToPlay"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>